credentials database created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,16 @@ spring.application.name=riwi
 
 server.servlet.context-path=/api/v1
 
-spring.datasource.url=jdbc:mysql://localhost:3306/riwi_db
+spring.datasource.url=jdbc:mysql://riwidb-danielsanchezm92-1bd2.i.aivencloud.com:11578/riwidb?useSSL=false&serverTimezone=UTC
 
 #========== RIWI CREDENTIALS ==========
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_d-OSut_0P62zYMvlbK3
 
 #========== PERSONAL CREDENTIALS ==========
 # spring.datasource.username=root
 # spring.datasource.password=
 
-#========== RAILWAY CREDENTIALS ==========
-# spring.datasource.url=jdbc:mysql://root:kfFlmLntCxPZeYAtPVZiMNuTtVQAWaxp@monorail.proxy.rlwy.net:39609/railway
-# spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Configuraciones de JPA
