--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,16 @@
+#========== APPLICATION ==========
 spring.application.name=riwi
-
 server.servlet.context-path=/api/v1
 
-#========== RIWI CREDENTIALS ==========
-
+#========== DB CREDENTIALS ==========
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-
-#========== PERSONAL CREDENTIALS ==========
-# spring.datasource.username=root
-# spring.datasource.password=
-
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#Configuraciones de JPA
+#========== CONFIGURATION JPA ==========
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-#Dialecto
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
